# cuda-patterns

./: .gitignore  01-simple.cu  CMakeLists.txt  README.md
01-vector-add/: 01-vector-add.cu
02-matrix-add/: 02-matrix-add.cu
03-image-blur/: 03-image-blur.cu  stb_image.h  stb_image_write.h
04-matrix-multiply-naive/: 04-matrix-multiply-naive.cu
04-naive-matrix-multiply/: 04-naive-matrix-multiply.cu
05-matrix-multiply-tiled/: 05-matrix-multiply-tiled.cu
05-tiled-matrix-multiply/: 05-tiled-matrix-multiply.cu
06-matrix-multiply-tiled-coarsened/: 06-matrix-multiply-tiled-coarsened.cu
06-tiled-matrix-multiply-coarsened/: 06-tiled-matrix-multiply-coarsened.cu
07-convolution-naive/: 07-convolution-naive.cu
07-naive-convolution/: 07-naive-convolution.cu
08-convolution-tiled/: 08-convolution-tiled.cu
08-tiled-convolution/: 08-tiled-convolution.cu
09-convolution-tiled-hybrid-cache/: 09-convolution-tiled-hybrid-cache.cu
09-tiled-convolution-hybrid-cache/: 09-tiled-convolution-hybrid-cache.cu
10-naive-stencil-sweep/: 10-naive-stencil-sweep.cu
10-stencil-sweep-naive/: 10-stencil-sweep-naive.cu
11-stencil-sweep-tiled/: 11-stencil-sweep-tiled.cu
11-tiled-stencil-sweep/: 11-tiled-stencil-sweep.cu
12-stencil-sweep-tiled-plane-sweep/: 12-stencil-sweep-tiled-plane-sweep.cu
12-tiled-stencil-plane-sweep/: 12-tiled-stencil-plane-sweep.cu
13-naive-parallel-histogram/: 13-naive-parallel-histogram.cu
13-parallel-histogram-naive/: 13-parallel-histogram-naive.cu
14-parallel-histogram-privatized/: 14-parallel-histogram-privatized.cu
15-parallel-histogram-shared/: 15-parallel-histogram-shared.cu
16-parallel-histogram-shared-coarsened/: 16-parallel-histogram-shared-coarsened.cu
17-parallel-histogram-hybrid/: 17-parallel-histogram-hybrid.cu  run_search.sh
18-parallel-reduction/: 18-parallel-reduction.cu
19-prefix-sum-single-block/: 19-prefix-sum-single-block.cu
20-prefix-sum-single-block-coarsened/: 20-prefix-sum-single-block-coarsened.cu
21-prefix-sum-general/: 21-prefix-sum-general.cu
22-sparse-matrix-vector-coo/: 22-sparse-matrix-vector-coo.cu
23-sparse-matrix-vector-ell/: 23-sparse-matrix-vector-ell.cu
24-bfs-naive/: 24-bfs-naive.cu
common/graph/: graph.cpp  graph.h
projects/01-vector-add/: 01-vector-add.cu
projects/02-matrix-add/: 02-matrix-add.cu
projects/03-image-blur/: 03-image-blur.cu
projects/04-matrix-multiply-naive/: 04-matrix-multiply-naive.cu
projects/05-matrix-multiply-tiled/: 05-matrix-multiply-tiled.cu
projects/06-matrix-multiply-tiled-coarsened/: 06-matrix-multiply-tiled-coarsened.cu
projects/07-convolution-naive/: 07-convolution-naive.cu
projects/08-convolution-tiled/: 08-convolution-tiled.cu
projects/09-convolution-tiled-hybrid-cache/: 09-convolution-tiled-hybrid-cache.cu
projects/10-stencil-sweep-naive/: 10-stencil-sweep-naive.cu
projects/11-stencil-sweep-tiled/: 11-stencil-sweep-tiled.cu
projects/12-stencil-sweep-tiled-plane-sweep/: 12-stencil-sweep-tiled-plane-sweep.cu
projects/13-parallel-histogram-naive/: 13-parallel-histogram-naive.cu
projects/14-parallel-histogram-privatized/: 14-parallel-histogram-privatized.cu
projects/15-parallel-histogram-shared/: 15-parallel-histogram-shared.cu
projects/16-parallel-histogram-shared-coarsened/: 16-parallel-histogram-shared-coarsened.cu
projects/17-parallel-histogram-hybrid/: 17-parallel-histogram-hybrid.cu
projects/18-parallel-reduction/: 18-parallel-reduction.cu
(+9 files in other folders)
